Thu Aug 03 10:32:37 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/iconv_fread.c(added):
	* src/tds/iconv.c src/tds/unittests/.cvsignore:
	* src/tds/unittests/Makefile.am:
	- fix tds_iconv_fread and add a test for it

Mon Jul 31 13:27:53 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c
	- proper error message for using bcp with TDS version 4.2

Mon Jul 31 13:23:44 EDT 2006	JK Lowden <jklowden@freetds.org>
	* include/sybdb.h src/dblib/dblib.c
	- proper error message for using bcp with TDS version 4.2

Thu Jul 27 15:22:27 EDT 2006	JK Lowden <jklowden@freetds.org>
	* samples/odbc_rpc.pl	use fetchrow_array
	* src/tds/unittests/Makefile.am include parent directory

Tue Jul 25 10:16:45 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac m4/ac_nullzero.m4: add test for portability

Tue Jul 25 10:10:22 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/paramcore.c: updated

Mon Jul 24 11:39:13 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/prepclose.c:
	- test with SQLExecDirect

Mon Jul 17 15:18:48 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/unittests/build_dsw.pl(removed):
	* win32/build_dsw.pl(added) src/dblib/unittests/Makefile.am:
	* src/odbc/unittests/Makefile.am:
	- add a Makefile target to build projects for msvc6

Thu Jul 13 10:20:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/unittests/moreandcount.c:
	- remove next_row_count, now useless... rpc.c works the same

Wed Jul 12 13:23:43 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/odbc/odbc.c src/tds/token.c:
	- use TDS_NO_COUNT instead of bad rows_affected for next_row_count. 
	- src/odbc/unittests/rpc.c now works

Wed Jul 12 16:15:14 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/test-other.sh: add file log
	* src/odbc/unittests/rpc.c: fix uninitialized error
