@@ -19,11 +19,16 @@
 
 #include "common.h"
 #include <tdsiconv.h>
+
+#if HAVE_UNISTD_H
+#include <unistd.h>
+#endif /* HAVE_UNISTD_H */
+
 #include <assert.h>
 
 /* test tds_iconv_fread */
 
-static char software_version[] = "$Id: iconv_fread.c,v 1.1 2006-08-03 08:34:04 freddy77 Exp $";
+static char software_version[] = "$Id: iconv_fread.c,v 1.2 2006-08-03 18:31:48 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 int
